fixed images, fixed alignment issues

--- a/scss/security.css
+++ b/scss/security.css
@@ -160,7 +160,6 @@ body {
 .txt-cntnr {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 3rem;
 }
 
 .security-banner h3 {
